fixed calculus maps

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ R/bdn/weights_bdn.Rdata
 R/bdn/dataMerge.Rdata
 R/Suini /geometrySuini.csv
 R/Bovini/Bovini.shp
+R/bdn/SerieStorica/PrintAllStation.pdf
