--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ R/bdn/dataMerge.Rdata
 R/Suini /geometrySuini.csv
 R/Bovini/Bovini.shp
 R/bdn/SerieStorica/PrintAllStation.pdf
+R/bdn/SerieStorica/FinalComparison.pdf
