--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ R/Suini /geometrySuini.csv
 R/Bovini/Bovini.shp
 R/bdn/SerieStorica/PrintAllStation.pdf
 R/bdn/SerieStorica/FinalComparison.pdf
+R/HistPlot/AGC_Dataset.csv
