--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ R/Bovini/Bovini.shp
 R/bdn/SerieStorica/PrintAllStation.pdf
 R/bdn/SerieStorica/FinalComparison.pdf
 R/HistPlot/AGC_Dataset.csv
+R/HistPlot/.RData
+R/HistPlot/.DS_Store
+R/HistPlot/.DS_Store
+R/HistPlot/.Rhistory
+R/HistPlot/AGC_Dataset_v_3_0_0.rdata
