--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ R/HistPlot/.DS_Store
 R/HistPlot/.DS_Store
 R/HistPlot/.Rhistory
 R/HistPlot/AGC_Dataset_v_3_0_0.rdata
+R/bdn/Validation/.RData
+R/bdn/Validation/AGC_Dataset.csv
+R/HistPlot/.RDataTmp
+R/RasterPlot/AGC_Dataset.csv
