--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ R/bdn/Validation/.RData
 R/bdn/Validation/AGC_Dataset.csv
 R/HistPlot/.RDataTmp
 R/RasterPlot/AGC_Dataset.csv
+R/PlotMaps/.RDataTmp
+R/PlotMaps/.Rhistory
+R/HistPlot/.RDataTmp1
+*.rdata
